# Superml.DataTruth

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy-saas.sh  docker-compose.prod.yml  docker-compose.saas.yml  docker-compose.yml  pyproject.toml  requirements.txt
database/: init_database.sql  internal-schema.sql  internal-seed.sql  schema.sql  seed.sql
docs/: API.md  ARCHITECTURE.md  BUILD_SUMMARY.md  CALCULATED_METRICS_UI.md  CHART_VISUALIZATION.md  DATABASE_CHOICE_FEATURE.md  INSIGHTS_IMPLEMENTATION.md  INTELLIGENT_SUGGESTIONS.md  LAUNCH_CHECKLIST.md  LEARNING_AGENT.md  NAVIGATION_GUIDE.md  ORCHESTRATOR_IMPROVEMENTS.md  PRODUCT_IMPROVEMENTS_2025.md  README.md  RLS_ARCHITECTURE_DIAGRAM.md  RLS_CONFIGURATION.md  RLS_IMPLEMENTATION_SUMMARY.md  RLS_INDEX.md  RLS_QUICK_REFERENCE.md  RLS_SETUP_GUIDE.md  SAAS_DEPLOYMENT.md  SAAS_TRANSFORMATION.md  SEARCH_AND_ASK_FEATURE.md  SECURITY.md  SEMANTIC_LAYER.md  SQL_VALIDATOR_V2.md  THOUGHTSPOT_PATTERNS.md  USER_ACTIVITY_TRACKING.md  USER_MANAGEMENT.md  VECTOR_DB_IMPLEMENTATION.md  vector-db.md
docs/demo-img/: README.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  main.tsx
migrations/: 002_add_user_profile_columns.sql  003_add_calculated_metrics.sql  004_add_user_activity_tracking.sql  005_fix_calculated_metrics_schema.sql  006_add_chat_sessions.sql  007_add_example_queries.sql  008_add_user_rls_config.sql
nginx/: nginx.conf
prompts/: datatruth-system.prompt.md  intent-extraction.prompt.md  master-prompt.md
src/: __init__.py
src/activity/: __init__.py  analyzer.py  logger.py  models.py  routes_to_add.py
src/analytics/: __init__.py  anomaly.py  attribution.py  forecasting.py  statistics.py  time_intelligence.py
src/api/: __init__.py  app.py  auth.py  main.py  models.py  rate_limit.py  rls_query_example.py  routes.py  setup.py  suggestions.py  vector_routes.py
src/chat/: __init__.py
src/config/: __init__.py  loader.py  settings.py
src/connection/: __init__.py  manager.py  models.py
src/database/: __init__.py  cache.py  connection.py  executor.py  internal_db.py
src/feedback/: __init__.py  collector.py
src/fieldmap/: __init__.py  ai_describer.py  mapper.py  models.py
src/insights/: __init__.py  generator.py  learner.py  models.py
src/integration/: __init__.py  orchestrator.py  orchestrator_v2.py
src/learning/: __init__.py  feedback_collector.py  query_learner.py  semantic_matcher.py
src/llm/: __init__.py  client.py  prompts.py
src/matching/: __init__.py  entity_matcher.py  fuzzy_matcher.py
src/monitoring/: __init__.py  health.py
src/optimization/: __init__.py  analyzer.py  explainer.py  pagination.py  plan_cache.py
src/planner/: __init__.py  intent_extractor.py  query_plan.py
src/quality/: __init__.py  profiler.py  (+1 more)
(+48 files in other folders)
